# routes/api.php
@@ -23,8 +23,8 @@ Route::post('/register', [UserController::class, 'store'])->name('register');
 Route::post('/login', [AuthController::class, 'login'])->name('login');
 
 // recovery password
-Route::post('/forgetpassword', [UserController::class, 'forgetPassword'])->name('forget.password');
-Route::post('/resetPassword/{token}', [UserController::class, 'resetPassword'])->name('reset.password');
+Route::post('/forget-password', [UserController::class, 'forgetPassword'])->name('forget.password');
+Route::post('/reset-password/{token}', [UserController::class, 'resetPassword'])->name('reset.password');
 
 Route::get('/faqs', [FaqController::class, 'index']);
 Route::get('/apps', [AppController::class, 'index'])->name('app.index');
